some changes on index

--- a/html/index.html
+++ b/html/index.html
@@ -88,9 +88,9 @@
                                            
                                             setTimeout(function()
                                                 {
-                                                    document.getElementById("totalPub").innerHTML = fill();
+                                                    document.getElementById("totalPub").innerHTML = 127;
                                                     //console.log(totalPub);
-                                            }, 5000);
+                                            }, 3000);
 
 
                                         </script>
@@ -208,10 +208,10 @@
     <script src="../plugins/bower_components/counterup/jquery.counterup.min.js"></script>
     <!--Morris JavaScript -->
     <script src="../plugins/bower_components/raphael/raphael-min.js"></script>
-    <script src="../plugins/bower_components/morrisjs/morris.js"></script>
+    <!--<script src="../plugins/bower_components/morrisjs/morris.js"></script>-->
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.min.js"></script>
-    <script src="js/dashboard1.js"></script>
+    <!--<script src="js/dashboard1.js"></script>-->
     <script src="../plugins/bower_components/toast-master/js/jquery.toast.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
