--- a/html/publication.html
+++ b/html/publication.html
@@ -19,12 +19,9 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- color CSS -->
     <link href="css/colors/blue-dark.css" id="theme" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="vendor/chart.js/Chart.min.js"></script>
+    <script src="meteo.js"></script>
 
 
 </head>
@@ -59,15 +56,60 @@
             <!-- /.navbar-top-links -->
             <!-- /.navbar-static-side -->
         </nav>
-
-
+        <script type="text/javascript">
+                    function getDavid(){
+                        tab = [
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0],
+                            [0, 0, 0, 0, 0, 0]
+                        ];
+                        result = [];
+                        Promise.all([
+                            getparannee(2016, false, function (data) {
+                                console.log(data);
+                            }, function (e) {
+                                console.error(e)
+                            }),
+                            getparannee(2017, false, function (data) {
+                                console.log(data);
+                            }, function (e) {
+                                console.error(e)
+                            }),
+                            getparannee(2018, false, function (data) {
+                                console.log(data);
+                            }, function (e) {
+                                console.error(e)
+                            }),
+                            getparannee(2019, false, function (data) {
+                                console.log(data);
+                            }, function (e) {
+                                console.error(e)
+                            }),
+                            getparannee(2020, false, function (data) {
+                                console.log(data);
+                            }, function (e) {
+                                console.error(e)
+                            })
+                        ]).then(function () {
+                            console.log(result);
+                            fillPublication();
+                        })
+                    }
+                    getDavid();
+                 </script>
 
         <!-- Left navbar-header -->
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse slimscrollsidebar">
                 <ul class="nav" id="side-menu">
                     <li style="padding: 10px 0 0;">
-                          <br> <br> <br><br><br>
                         <a href="index.html" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">Dashboard</span></a>
                     </li>
                     
@@ -159,6 +201,12 @@
                     </div>
                 </div>
                 <!-- /.row -->
+                <div class="card shadow mb-4" style="padding: 20px;">
+                </div>
+                <div class="card shadow mb-4" style="padding: 20px;">
+                    <div id="result">
+                    </div>
+                </div>
             </div>
             <!-- /.container-fluid -->
             <footer class="footer text-center"> 2020 &copy; DAVID laboratory data</footer>
@@ -206,7 +254,23 @@
         });
  </script>
 	
-	
+    <!-- Custom scripts for all pages-->
+    <script src="js/sb-admin-2.min.js"></script>
+
+     <!-- Page level plugins -->
+    <script src="vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+
+    <!-- Page level custom scripts -->
+    <script src="js/demo/datatables-demo.js"></script>
+    <!-- Page level plugins -->
+    <script src="vendor/chart.js/Chart.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="js/demo/chart-pie-demo.js"></script>
+
+
 	
 </body>
 
