--- a/html/publication.html
+++ b/html/publication.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body onload="buttonClikGET(2017,3)">
     <!-- Preloader -->
     <div class="preloader">
         <div class="cssload-speeding-wheel"></div>
