ajout de lecture

--- a/html/publication.html
+++ b/html/publication.html
@@ -102,8 +102,8 @@
                                   <option value="ART">Article dans une revue</option>
                                   <option value="THESE">THESE</option>
                                   <option value="HDR">High dynamic range</option>
-                               
-                                  <option value="LECTURE">POSTER</option>
+                                  <option value="LECTURE">Lecture</option>
+                                  <option value="POSTER">Poster</option>
 								  <option value="COUV">Chapitre d'ouvrage</option>
 								  <option value="DOUV">Direction d'ouvrage</option>
 								  <option value="OTHER">Ouvrage y compris la traduction</option>
