affichage du nombre de pub renvoyé par une requete

--- a/html/publication.html
+++ b/html/publication.html
@@ -149,6 +149,7 @@
                             <div class="table-responsive">
                                 <table class="table" id="tab">
                                     <thead>
+									   <tr ><th></th><th></th><th id=nb_art></th></tr>
                                         <tr>
                                             <th>Docid</th>
                                             <th>Titre</th>
@@ -161,6 +162,7 @@
                                         </tr>
                                     </thead>
                                     <tbody id="zone_affiche">
+									
                                         
                                     </tbody>
                                 </table>
