integration de la fonction permettant la recherche croisé à la page de recherche

--- a/html/publication.html
+++ b/html/publication.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body onload="buttonClikGET(2017,3)">
+<body onload="buttonClikGET(2015,4);buttonClikGET(2015,3)">
     <!-- Preloader -->
     <div class="preloader">
         <div class="cssload-speeding-wheel"></div>
