Gestion des erreurs

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,9 @@
                     <li>
                         <a href="publication.html" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">Publication Search</span></a>
                     </li>
+                    <li>
+                        <a href="publication.html?errors=errors" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="errors-menu">Publication errors</span></a>
+                    </li>
     
                 </ul>
               
