--- a/html/publication.html
+++ b/html/publication.html
@@ -69,6 +69,9 @@
                     <li>
                         <a href="publication.html" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">Publication search</span></a>
                     </li>
+                    <li>
+                        <a href="publication.html?errors=errors" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="errors-menu">Publication errors</span></a>
+                    </li>
                   
                 </ul>
                 <div class="center p-20">
@@ -179,7 +182,7 @@
                 </div>
             </div>
             <!-- /.container-fluid -->
-            <footer class="footer text-center"> 2020 &copy; DAVID laboratory data</footer>
+            <footer class="footer text-center"> 2020 &copy; DAVID laboratory</footer>
         </div>
         <!-- /#page-wrapper -->
     </div>
