amelioration du readme + modification de certains fichiers

--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+
     <link rel="icon" type="image/png" sizes="16x16" href="../plugins/images/image.jpeg">
-    <title>DAVID laboratory data</title>
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Menu CSS -->
@@ -27,8 +27,9 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="vendor/chart.js/Chart.min.js"></script>
-    <script src="meteo.js"></script>
+      <script src="js/hal_js/dashord.js"></script>
   
+      <title>DAVID laboratory data</title>
 </head>
 
 <body>
@@ -151,7 +152,6 @@
     <script src="../plugins/bower_components/waypoints/lib/jquery.waypoints.js"></script>
     <script src="../plugins/bower_components/counterup/jquery.counterup.min.js"></script>
     <!--Morris JavaScript -->
-    <script src="../plugins/bower_components/raphael/raphael-min.js"></script>
     <!--<script src="../plugins/bower_components/morrisjs/morris.js"></script>-->
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.min.js"></script>
