--- a/html/publication.html
+++ b/html/publication.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+
     <link rel="icon" type="image/png" sizes="16x16" href="../plugins/images/image.jpeg">
-    <title>DAVID laboratory data</title>
-    <!-- Bootstrap Core CSS -->
+       <!-- Bootstrap Core CSS -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Menu CSS -->
     <link href="../plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
@@ -19,9 +19,13 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- color CSS -->
     <link href="css/colors/blue-dark.css" id="theme" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="vendor/chart.js/Chart.min.js"></script>
-    <script src="meteo.js"></script>
+    <script src="js/hal_js/dashord.js"></script>
+
+     <title>DAVID laboratory data</title>
+
 
 
 </head>
@@ -39,14 +43,14 @@
             <div class="navbar-header"> <a class="navbar-toggle hidden-sm hidden-md hidden-lg " href="javascript:void(0)" data-toggle="collapse" data-target=".navbar-collapse"><i class="fa fa-bars"></i></a>
                 
                 <div class="top-left-part"><a class="logo" href="index.html"><b><img class="image" src="../plugins/images/image.jpeg" alt="home" /></b><span class="hidden-xs"></span></a></div>
-
-                <ul class="nav navbar-top-links navbar-left m-l-20 hidden-xs">
+                  <ul class="nav navbar-top-links navbar-left m-l-20 hidden-xs">
                     <li>
                         <form role="search" class="app-search hidden-xs">
                             <input type="text" placeholder="Search..." class="form-control"> <a href=""><i class="fa fa-search"></i></a>
                         </form>
                     </li>
                 </ul>
+
                 <ul class="nav navbar-top-links navbar-right pull-right">
                    
                 </ul>
@@ -200,7 +204,7 @@
     <script src="js/waves.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.min.js"></script>
-    <script src="js/hal_js/scripthal.js"></script>
+    <script src="js/hal_js/publicationSearch.js"></script>
 	<script >
         $(document).ready(function(){
 		
